--- a/local.yml
+++ b/local.yml
@@ -1,7 +1,7 @@
 - hosts: localhost
   tasks:
     - include: tasks/dotfiles.yml
-    # - include: tasks/ssh.yml
+    - include: tasks/ssh.yml
     - include: tasks/git-setup.yml
     - include: tasks/applications.yml # needs fixing
     - include: tasks/chrome-extensions.yml # TODO: fix needed
