fix applications syntax, fix app-store setup

--- a/tasks/app-store.yml
+++ b/tasks/app-store.yml
@@ -2,14 +2,15 @@
   community.general.mas:
     id:
       - 975890633 # HotKey
-      - 784801555 # OneNote
-      - 462058435 # Microsoft Excel
-      - 462054704 # microsoft Word
-      - 462062816 # Microsoft PowerPoint
+      # - 784801555 # OneNote
+      # - 462058435 # Microsoft Excel
+      # - 462054704 # microsoft Word
+      # - 462062816 # Microsoft PowerPoint
     state: present
   tags:
+    - personal
     - work
-    - office
+    - appstore-essential
     
 - name: Install personal apps from App Store
   community.general.mas:
@@ -18,4 +19,4 @@
       - 1333542190 # 1Password
     state: present
   tags:
-    - appstore-personal
+    - personal
