--- a/local.yml
+++ b/local.yml
@@ -3,7 +3,7 @@
     - include: tasks/dotfiles.yml
     - include: tasks/ssh.yml
     - include: tasks/git-setup.yml
-    - include: tasks/applications.yml # needs fixing
+    - include: tasks/applications.yml
     - include: tasks/chrome-extensions.yml # TODO: fix needed
     - include: tasks/npm-packages.yml # needs node
     - include: tasks/app-store.yml
