--- a/local.yml
+++ b/local.yml
@@ -7,5 +7,6 @@
     - include: tasks/chrome-extensions.yml # TODO: fix needed
     - include: tasks/npm-packages.yml # needs node
     - include: tasks/app-store.yml
+    - include: tasks/vs-extensions.yml
 
     # - include: tasks/zsh-setup.yml
