add macOS script to ansible run

--- a/local.yml
+++ b/local.yml
@@ -3,6 +3,7 @@
     - include: tasks/dotfiles.yml
     - include: tasks/ssh.yml
     - include: tasks/git-setup.yml
+    - include: tasks/mac-os.yml
     - include: tasks/applications.yml
     - include: tasks/chrome-extensions.yml # TODO: fix needed
     - include: tasks/npm-packages.yml # needs node
