add git pull strategy config

--- a/tasks/git-setup.yml
+++ b/tasks/git-setup.yml
@@ -29,3 +29,12 @@
     value: "Povilas Krasavinas"
   tags:
   - work
+
+  - name: Git pull strategy
+  git_config:
+    name: pull.ff
+    scope: global
+    value: only
+  tags:
+  - git-nortal
+  - git-personal
