--- a/tasks/ssh.yml
+++ b/tasks/ssh.yml
@@ -4,7 +4,7 @@
     mode: 0700
     state: directory
   tags:
-    - dotfiles
+    # - dotfiles
     - install
     - ssh
 
@@ -14,7 +14,7 @@
     dest: "{{ dest_key }}"
     mode: 0600
   tags:
-    - dotfiles
+    # - dotfiles
     - install
     - ssh
 
@@ -24,7 +24,7 @@
     dest: "{{ dest_key }}.pub"
     mode: 0644
   tags:
-    - dotfiles
+    # - dotfiles
     - install
     - ssh
 
