--- a/tasks/app-store.yml
+++ b/tasks/app-store.yml
@@ -16,7 +16,7 @@
   community.general.mas:
     id:
       - 568494494 # Pocket
-      - 1333542190 # 1Password
+      # - 1333542190 # 1Password
     state: present
   tags:
     - personal
