--- a/tasks/vs-extensions.yml
+++ b/tasks/vs-extensions.yml
@@ -7,6 +7,8 @@
     - dbaeumer.vscode-eslint
     - VisualStudioExptTeam.vscodeintellicode
     - VisualStudioExptTeam.intellicode-api-usage-examples
+    - eamodio.gitlens
   tags:
     - work
+    - personal
     - vs-extensions
