improve tags & update readme & add keyrepeat mac setting & remove 10k plugin

--- a/tasks/applications.yml
+++ b/tasks/applications.yml
@@ -2,8 +2,7 @@
   ignore_errors: true
   homebrew:
     name:
-      "romkatv/powerlevel10k/powerlevel10k,\
-      flux,\
+      "flux,\
       age,\
       nvm,\
       mas"
