update asdf config

--- a/local.yml
+++ b/local.yml
@@ -11,3 +11,5 @@
     - include: tasks/npm-packages.yml
     - include: tasks/app-store.yml
     - include: tasks/vs-extensions.yml
+    - include: tasks/neovim.yml
+
