add powerlevel yml and font tap

--- a/local.yml
+++ b/local.yml
@@ -1,6 +1,7 @@
 - hosts: localhost
   tasks:
     - include: tasks/zsh-setup.yml
+    - include: tasks/powerlevel10k.yml
     - include: tasks/dotfiles.yml
     - include: tasks/ssh.yml
     - include: tasks/git-setup.yml
