--- a/tasks/neovim.yml
+++ b/tasks/neovim.yml
@@ -1,4 +1,5 @@
 - name: Get Packer
+  ignore_errors: true
   ansible.builtin.git:
     repo: 'https://github.com/wbthomason/packer.nvim'
     dest: "{{ lookup('env', 'HOME') }}/.local/share/nvim/site/pack/packer/start/packer.nvim"
@@ -9,6 +10,7 @@
     - neovim
 
 - name: Pull my nvim config
+  ignore_errors: true
   ansible.builtin.git:
     repo: 'https://github.com/povkas/nvim'
     dest: "{{ lookup('env', 'HOME') }}/.config/nvim"
