Add some useful applications

--- a/tasks/applications.yml
+++ b/tasks/applications.yml
@@ -57,6 +57,9 @@
       stats,\
       rectangle,\
       dbeaver-community,\
+      monitorcontrol,\
+      caffeine,\
+      karabiner-elements,\
       microsoft-remote-desktop,\
       google-chrome"
     state: present
